# zonaly

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  splashscreen.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: generate-icons.mjs  generate-installer-assets.mjs
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json  splashscreen.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src-tauri/src/db/: favorites.rs  history.rs  mod.rs  sessions.rs  watchlist.rs
src-tauri/src/rdap/: bootstrap.rs  client.rs  details.rs  mod.rs  whois.rs
src/components/: AppFooter.tsx  AppLogo.tsx  DomainDetailsModal.tsx  DomainInput.tsx  ExtensionPicker.test.ts  ExtensionPicker.tsx  HistoryPanel.tsx  LanguageSelector.tsx  ResultRow.tsx  ResultsList.tsx  TabBar.tsx  ThemeToggle.tsx  TitleBar.tsx  Toast.tsx  WatchlistPanel.tsx  WatchlistSettingsModal.tsx
src/context/: TabsContext.tsx  tabs.test.ts
src/hooks/: useDomainCheck.ts  useMonitoring.ts  useScale.ts  useToast.ts
src/i18n/: config.ts
src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  tr.json  zh.json
src/styles/: globals.css  theme.css
src/theme/: ThemeProvider.tsx
src/types/: domain.ts  storage.ts
src/utils/: platform.ts  sanitizeDomains.test.ts  sanitizeDomains.ts
